# brute-force-defender

./: .dockerignore  .env.example  .flake8  .gitignore  CHECKUP.md  Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  install.sh  main.py  pyproject.toml  requirements.txt  setup.py  uninstall.sh
.github/workflows/: ci.yml
data/: users.json
demo/: demo.html
docs/: RAPOR.md
results/: all_results.json
src/: __init__.py  attacker.py  benchmark.py  database.py  hasher.py  visualizer.py
tests/: __init__.py  test_attacker.py  test_database.py  test_hasher.py
