[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brute-force-defender"
version = "1.0.0"
description = "Educational BLAKE3 salting and brute-force defense demonstration"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
  { name = "alituranakt" }
]
dependencies = [
  "blake3>=1.0.0",
  "matplotlib>=3.5.0",
  "flask>=2.3.0",
  "python-dotenv>=1.0.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
  "flake8>=7.0.0",
  "bandit>=1.7.0",
  "safety>=3.0.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
